--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
       "src": "code.py",
       "use": "@vercel/python"
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/code.py"
+    }
   ]
 }
